--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,8 @@
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "jest-expo": "~40.0.0",
-    "typescript": "~4.0.0"
+    "typescript": "~4.0.0",
+    "prettier": "~2.2.1"
   },
   "private": true
 }
