--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,10 +29,12 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
+    "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
@@ -40,8 +42,8 @@
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "jest-expo": "~40.0.0",
-    "typescript": "~4.0.0",
-    "prettier": "~2.2.1"
+    "prettier": "~2.2.1",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
